<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Location.LocationActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/statusBarColor"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/TxtLocalisation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/TxtLocalisation"
        android:layout_width="227dp"
        android:layout_height="59dp"
        android:text="@string/adresse"
        android:textAlignment="textStart"
        android:textColor="@color/white_warm"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:text="@string/distance"
        android:textAlignment="textStart"
        android:textColor="@color/white_warm"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCoordonnees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/TxtLocalisation" />

    <TextView
        android:id="@+id/txtCoordonnees"
        android:layout_width="227dp"
        android:layout_height="59dp"
        android:text="@string/coordonnees"
        android:textAlignment="textStart"
        android:textColor="@color/white_warm"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@id/txtDistance" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/chercher"
        android:textSize="12sp"
        android:textColor="@color/white_warm"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TxtLocalisation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        app:rippleColor="@color/color_caramel" />


</androidx.constraintlayout.widget.ConstraintLayout>