<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Main.MainActivity">

    <ImageView
        android:id="@+id/img_wave"
        android:layout_width="0in"
        android:layout_height="0in"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:2.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="?attr/waveBackgroundIMG" />

    <ImageView
        android:id="@+id/img_world"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:src="?attr/worldIMG" />


    <Button
        android:id="@+id/bt_localisation"
        android:layout_width="160dp"
        android:layout_height="185dp"
        android:backgroundTint="?attr/buttonColor"
        android:text="@string/localisation"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_historique"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:rippleColor="@color/color_caramel" />

    <Button
        android:id="@+id/bt_historique"
        android:layout_width="160dp"
        android:layout_height="185dp"
        android:backgroundTint="?attr/buttonColor"
        android:text="@string/historique"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_localisation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:rippleColor="@color/color_caramel" />


    <ImageView
        android:id="@+id/img_setting"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/color_caramel"
        app:srcCompat="@drawable/ic_baseline_settings" />

    <TextView
        android:id="@+id/txt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/where_am_i"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_world"
        app:layout_constraintVertical_bias="0.07" />


</androidx.constraintlayout.widget.ConstraintLayout>






